--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ vendor/
 
 # goenv local version. See https://github.com/syndbg/goenv/blob/master/COMMANDS.md#goenv-local for more info.
 .go-version
+
+node_modules/
