--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,15 +11,17 @@ repos:
     hooks:
       - id: go-fmt
       - id: go-vet
+        args: [./..]
       - id: go-imports
       - id: go-cyclo
         args: [-over=15]
       - id: golangci-lint
+        args: ["--config=./.golanagci.yml"]
       - id: go-critic
       - id: go-mod-tidy
       - id: no-go-testing
   - repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
-    rev: v8.0.0
+    rev: v9.13.0
     hooks:
       - id: commitlint
         stages: [commit-msg]
